--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.0",
     "react-scripts": "4.0.3",
+    "react-twemoji": "^0.3.0",
     "socket.io-client": "^4.3.2",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.11"
